<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="164dp"
        android:layout_margin="50dp"
        android:src="@drawable/demoimage"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="64dp" />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:hint="Username"
        android:textSize="30dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/et_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="password"
        android:text="@string/password"
        android:textSize="30dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/btn_signin1"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#512D"
        android:text="@string/sign_in"
        android:textSize="28dp" />
    <Button
        android:id="@+id/btn_signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="28dp"
        android:backgroundTint="#512D"
        android:layout_margin="5dp"/>
</LinearLayout>