<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imcclogo" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:text="@string/enter_your_first_name"
        />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_last_name"
        />
    <EditText
        android:id="@+id/et_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/enter_your_email_id"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/enter_password"
        />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/confirm_password"
        />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign Up"
        android:backgroundTint="@color/blue"
        />
    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already a User? Then Click the button below"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
/>
    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign In"
        android:backgroundTint="@color/blue"
        />
</LinearLayout>